@@ -79,12 +79,11 @@ public enum VSubmenuConstructed implements IVSubmenu<CSubmenuConstructed> {
     private final Set<GameType> appliedVariants = new TreeSet<GameType>();
 	private final FPanel variantsPanel = new FPanel(new MigLayout("insets 10, gapx 10"));
     private final FCheckBox vntVanguard = new FCheckBox("Vanguard");
+    private final FCheckBox vntMomirBasic = new FCheckBox("Momir Basic");
     private final FCheckBox vntCommander = new FCheckBox("Commander");
     private final FCheckBox vntPlanechase = new FCheckBox("Planechase");
     private final FCheckBox vntArchenemy = new FCheckBox("Archenemy");
-    private String archenemyType = "Classic";
-    private final FComboBoxWrapper<String> comboArchenemy = new FComboBoxWrapper<String>(new String[]{
-    		"Archenemy (Classic - One player is the Archenemy)", "Supervillan Rumble (All players are Archenemies)"});
+    private final FCheckBox vntArchenemyRumble = new FCheckBox("Archenemy Rumble");
 
     // Player frame elements
     private final JPanel playersFrame = new JPanel(new MigLayout("insets 0, gap 0 5, wrap, hidemode 3"));
@@ -130,20 +129,20 @@ public enum VSubmenuConstructed implements IVSubmenu<CSubmenuConstructed> {
 
         // Populate and add variants panel
         vntVanguard.addItemListener(iListenerVariants);
+        vntMomirBasic.addItemListener(iListenerVariants);
         vntCommander.addItemListener(iListenerVariants);
         vntPlanechase.addItemListener(iListenerVariants);
         vntArchenemy.addItemListener(iListenerVariants);
-        comboArchenemy.setSelectedIndex(0);
-        comboArchenemy.setEnabled(vntArchenemy.isSelected());
-        comboArchenemy.addActionListener(aeComboListener);
+        vntArchenemyRumble.addItemListener(iListenerVariants);
 
         variantsPanel.setOpaque(false);
         variantsPanel.add(newLabel("Variants:"));
         variantsPanel.add(vntVanguard);
+        variantsPanel.add(vntMomirBasic);
         variantsPanel.add(vntCommander);
         variantsPanel.add(vntPlanechase);
         variantsPanel.add(vntArchenemy);
-        comboArchenemy.addTo(variantsPanel);
+        variantsPanel.add(vntArchenemyRumble);
 
         constructedFrame.add(new FScrollPane(variantsPanel, false, true,
                 ScrollPaneConstants.VERTICAL_SCROLLBAR_NEVER,
@@ -650,29 +649,62 @@ public enum VSubmenuConstructed implements IVSubmenu<CSubmenuConstructed> {
         };
 
         public void updateVariantControlsVisibility() {
-        	// Commander deck replaces basic deck, so hide that
-            deckLabel.setVisible(!appliedVariants.contains(GameType.Commander));
-            deckBtn.setVisible(!appliedVariants.contains(GameType.Commander));
-            cmdDeckSelectorBtn.setVisible(appliedVariants.contains(GameType.Commander));
-            cmdDeckEditor.setVisible(appliedVariants.contains(GameType.Commander));
-            cmdLabel.setVisible(appliedVariants.contains(GameType.Commander));
+            boolean isCommanderApplied = false;
+            boolean isPlanechaseApplied = false;
+            boolean isVanguardApplied = false;
+            boolean isArchenemyApplied = false;
+            boolean archenemyVisiblity = false;
+            boolean isDeckBuildingAllowed = true;
+            
+            for (GameType variant : appliedVariants) {
+                switch (variant) {
+                case Archenemy:
+                    isArchenemyApplied = true;
+                    if (playerIsArchenemy) {
+                        archenemyVisiblity = true;
+                    }
+                    break;
+                case ArchenemyRumble:
+                    archenemyVisiblity = true;
+                    break;
+                case Commander:
+                    isCommanderApplied = true;
+                    isDeckBuildingAllowed = false; //Commander deck replaces basic deck, so hide that
+                    break;
+                case Planechase:
+                    isPlanechaseApplied = true;
+                    break;
+                case Vanguard:
+                    isVanguardApplied = true;
+                    break;
+                default:
+                    if (variant.isAutoGenerated()) {
+                        isDeckBuildingAllowed = false;
+                    }
+                    break;
+                }
+            }
 
-            boolean archenemyVisiblity = appliedVariants.contains(GameType.ArchenemyRumble)
-        			|| (appliedVariants.contains(GameType.Archenemy) && playerIsArchenemy);
-        	scmDeckSelectorBtn.setVisible(archenemyVisiblity);
+            deckLabel.setVisible(isDeckBuildingAllowed);
+            deckBtn.setVisible(isDeckBuildingAllowed);
+            cmdDeckSelectorBtn.setVisible(isCommanderApplied);
+            cmdDeckEditor.setVisible(isCommanderApplied);
+            cmdLabel.setVisible(isCommanderApplied);
+
+            scmDeckSelectorBtn.setVisible(archenemyVisiblity);
             scmDeckEditor.setVisible(archenemyVisiblity);
             scmLabel.setVisible(archenemyVisiblity);
 
-            teamComboBox.setVisible(!appliedVariants.contains(GameType.Archenemy));
-            aeTeamComboBox.setVisible(appliedVariants.contains(GameType.Archenemy));
-            aeTeamComboBox.setEnabled(!(appliedVariants.contains(GameType.Archenemy) && playerIsArchenemy));
+            teamComboBox.setVisible(!isArchenemyApplied);
+            aeTeamComboBox.setVisible(isArchenemyApplied);
+            aeTeamComboBox.setEnabled(!(isArchenemyApplied && playerIsArchenemy));
 
-            pchDeckSelectorBtn.setVisible(appliedVariants.contains(GameType.Planechase));
-            pchDeckEditor.setVisible(appliedVariants.contains(GameType.Planechase));
-            pchLabel.setVisible(appliedVariants.contains(GameType.Planechase));
+            pchDeckSelectorBtn.setVisible(isPlanechaseApplied);
+            pchDeckEditor.setVisible(isPlanechaseApplied);
+            pchLabel.setVisible(isPlanechaseApplied);
 
-            vgdSelectorBtn.setVisible(appliedVariants.contains(GameType.Vanguard));
-            vgdLabel.setVisible(appliedVariants.contains(GameType.Vanguard));
+            vgdSelectorBtn.setVisible(isVanguardApplied);
+            vgdLabel.setVisible(isVanguardApplied);
         }
 
         @Override
@@ -761,7 +793,7 @@ public enum VSubmenuConstructed implements IVSubmenu<CSubmenuConstructed> {
             scmDeckSelectorBtn.setCommand(new Runnable() {
                 @Override
                 public void run() {
-                	currentGameMode = archenemyType.contains("Classic") ? GameType.Archenemy : GameType.ArchenemyRumble;
+                	currentGameMode = vntArchenemy.isSelected() ? GameType.Archenemy : GameType.ArchenemyRumble;
                     scmDeckSelectorBtn.requestFocusInWindow();
                     changePlayerFocus(index, currentGameMode);
                 }
@@ -770,7 +802,7 @@ public enum VSubmenuConstructed implements IVSubmenu<CSubmenuConstructed> {
             scmDeckEditor.setCommand(new UiCommand() {
                 @Override
                 public void run() {
-                    currentGameMode = archenemyType.contains("Classic") ? GameType.Archenemy : GameType.ArchenemyRumble;
+                    currentGameMode = vntArchenemy.isSelected() ? GameType.Archenemy : GameType.ArchenemyRumble;
                     Predicate<PaperCard> predSchemes = new Predicate<PaperCard>() {
                         @Override
                         public boolean apply(PaperCard arg0) {
@@ -1118,6 +1150,9 @@ public enum VSubmenuConstructed implements IVSubmenu<CSubmenuConstructed> {
             if (cb == vntVanguard) {
                 variantType = GameType.Vanguard;
             }
+            else if (cb == vntMomirBasic) {
+                variantType = GameType.MomirBasic;
+            }
             else if (cb == vntCommander) {
                 variantType = GameType.Commander;
             }
@@ -1125,18 +1160,38 @@ public enum VSubmenuConstructed implements IVSubmenu<CSubmenuConstructed> {
                 variantType = GameType.Planechase;
             }
             else if (cb == vntArchenemy) {
-                variantType = archenemyType.contains("Classic") ? GameType.Archenemy : GameType.ArchenemyRumble;
-                comboArchenemy.setEnabled(vntArchenemy.isSelected());
-                if (arg0.getStateChange() != ItemEvent.SELECTED) {
-                    appliedVariants.remove(GameType.Archenemy);
-                    appliedVariants.remove(GameType.ArchenemyRumble);
-                }
+                variantType = GameType.Archenemy;
+            }
+            else if (cb == vntArchenemyRumble) {
+                variantType = GameType.ArchenemyRumble;
             }
 
-            if (null != variantType) {
+            if (variantType != null) {
                 if (arg0.getStateChange() == ItemEvent.SELECTED) {
                     appliedVariants.add(variantType);
                     currentGameMode = variantType;
+
+                    //ensure other necessary variants are unchecked
+                    switch (variantType) {
+                    case Archenemy:
+                        vntArchenemyRumble.setSelected(false);
+                        break;
+                    case ArchenemyRumble:
+                        vntArchenemy.setSelected(false);
+                        break;
+                    case Commander:
+                        vntMomirBasic.setSelected(false);
+                        break;
+                    case Vanguard:
+                        vntMomirBasic.setSelected(false);
+                        break;
+                    case MomirBasic:
+                        vntCommander.setSelected(false);
+                        vntVanguard.setSelected(false);
+                        break;
+                    default:
+                        break;
+                    }
                 }
                 else {
                     appliedVariants.remove(variantType);
@@ -1152,27 +1207,6 @@ public enum VSubmenuConstructed implements IVSubmenu<CSubmenuConstructed> {
             }
             changePlayerFocus(playerWithFocus, currentGameMode);
         }
-    };
-
-    // Listens to the archenemy combo box
-    private ActionListener aeComboListener = new ActionListener() {
-    	@SuppressWarnings("unchecked")
-		@Override
-		public void actionPerformed(ActionEvent e) {
-			FComboBox<String> cb = (FComboBox<String>)e.getSource();
-			archenemyType = (String)cb.getSelectedItem();
-			GameType mode = archenemyType.contains("Classic") ? GameType.Archenemy : GameType.ArchenemyRumble;
-			appliedVariants.remove(GameType.Archenemy);
-    		appliedVariants.remove(GameType.ArchenemyRumble);
-    		appliedVariants.add(mode);
-
-    		currentGameMode = mode;
-            for (PlayerPanel pp : playerPanels) {
-        		pp.toggleIsPlayerArchenemy();
-                pp.updateVariantControlsVisibility();
-            }
-            changePlayerFocus(playerWithFocus, currentGameMode);
-		}
     };
 
     private ActionListener nameListener = new ActionListener() {
